fixing factories and implementing email verification
